--- a/calico_node/Dockerfile
+++ b/calico_node/Dockerfile
@@ -11,7 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM gliderlabs/alpine:edge
+# FROM gliderlabs/alpine:edge
+FROM gliderlabs/alpine:3.4
 MAINTAINER Tom Denham <tom@projectcalico.org>
 
 ENV GLIBC_VERSION 2.23-r1
